# timecode

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  tags  test.mjs  test.py  timecode.pyi
.github/workflows/: coverage.yaml  create_bindings_release.yml  create_crate_release.yaml  rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
java/: test.java
src/: framerates.rs  java.rs  javascript.rs  json.rs  lib.rs  parser.rs  python.rs  validate.rs
tests/: integration_handwritten.rs  integration_reference.rs  integration_sdvi.rs  sdvi.txt  sdvi_25.txt  sdvi_5994.txt  sdvi_convert.txt  sdvi_convert_rev.txt
tests/samples/: reference_convert_50.txt
