[package]
name = "timecodes"
description = "SMPTE Timecode library"
version = "10.2.0"
authors = ["John Schmidt <john@john2143.com>"]
edition = "2021"
license-file = "LICENSE"
keywords = ["smpte", "timecode", "framerate"]
repository = "https://github.com/John2143/timecode"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default=[]
javascript=["wasm-bindgen"]
python=["pyo3"]

[lib]
name = "timecode"
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "8.0.0"
pyo3 = { version = "0.25.0", features = ["extension-module"], optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }

[dev-dependencies]
smallstr = "0.3.0"
